--- a/CmdLineExample.lpi
+++ b/CmdLineExample.lpi
@@ -1,34 +1,36 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="12"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
         <LRSInOutputDirectory Value="False"/>
+        <CompatibilityMode Value="True"/>
       </Flags>
-      <MainUnit Value="0"/>
-      <ActiveWindowIndexAtStart Value="0"/>
     </General>
     <VersionInfo>
       <Language Value=""/>
       <CharSet Value=""/>
-      <StringTable ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="default" Default="True"/>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
-      <IgnoreBinaries Value="False"/>
-      <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
-      <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
     </PublishOptions>
     <RunParams>
       <local>
-        <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
+      <FormatVersion Value="2"/>
+      <Modes Count="1">
+        <Mode0 Name="default">
+          <local>
+            <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
+          </local>
+        </Mode0>
+      </Modes>
     </RunParams>
     <RequiredPackages Count="2">
       <Item1>
@@ -43,12 +45,8 @@
       <Unit0>
         <Filename Value="CmdLineExample.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="CmdLineExample"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="15" Y="4"/>
+        <CursorPos X="37" Y="15"/>
         <UsageCount Value="155"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -57,11 +55,8 @@
         <Filename Value="wnmainform.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="WMainForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <UnitName Value="wnmainform"/>
-        <EditorIndex Value="0"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
         <CursorPos X="124" Y="194"/>
         <UsageCount Value="155"/>
         <Loaded Value="True"/>
@@ -69,34 +64,27 @@
       </Unit1>
       <Unit2>
         <Filename Value="..\ucmdline.pas"/>
-        <UnitName Value="ucmdline"/>
         <TopLine Value="146"/>
         <CursorPos X="48" Y="1083"/>
         <UsageCount Value="4"/>
       </Unit2>
       <Unit3>
         <Filename Value="wnmainform.lfm"/>
-        <TopLine Value="1"/>
-        <CursorPos X="1" Y="1"/>
         <SyntaxHighlighter Value="LFM"/>
         <UsageCount Value="46"/>
       </Unit3>
       <Unit4>
         <Filename Value="tcmdbox.lrs"/>
-        <TopLine Value="1"/>
-        <CursorPos X="17" Y="1"/>
+        <CursorPos X="17"/>
         <UsageCount Value="13"/>
       </Unit4>
       <Unit5>
         <Filename Value="ucmdline.pas"/>
-        <UnitName Value="ucmdline"/>
-        <TopLine Value="1"/>
         <CursorPos X="8" Y="30"/>
         <UsageCount Value="30"/>
       </Unit5>
       <Unit6>
         <Filename Value="..\uflowcharteditor.pas"/>
-        <UnitName Value="uflowcharteditor"/>
         <TopLine Value="1015"/>
         <CursorPos X="25" Y="1039"/>
         <UsageCount Value="16"/>
@@ -104,10 +92,10 @@
       <Unit7>
         <Filename Value="ucmdbox.pas"/>
         <UnitName Value="uCmdBox"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="2"/>
-        <WindowIndex Value="0"/>
-        <TopLine Value="1"/>
-        <CursorPos X="14" Y="36"/>
+        <TopLine Value="229"/>
+        <CursorPos X="24" Y="240"/>
         <UsageCount Value="51"/>
         <Loaded Value="True"/>
       </Unit7>
@@ -121,128 +109,128 @@
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="1867" Column="51" TopLine="1829"/>
+        <Caret Line="350" Column="38" TopLine="322"/>
       </Position1>
       <Position2>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2079" Column="17" TopLine="2041"/>
+        <Caret Line="2332" Column="105" TopLine="2287"/>
       </Position2>
       <Position3>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2109" Column="73" TopLine="2041"/>
+        <Caret Line="2364" Column="13" TopLine="2295"/>
       </Position3>
       <Position4>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2799" Column="38" TopLine="2761"/>
+        <Caret Line="157" Column="26" TopLine="135"/>
       </Position4>
       <Position5>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2809" Column="41" TopLine="2761"/>
+        <Caret Line="175" Column="16" TopLine="135"/>
       </Position5>
       <Position6>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2838" Column="26" TopLine="2791"/>
+        <Caret Line="2362" Column="13" TopLine="2295"/>
       </Position6>
       <Position7>
-        <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2919" Column="34" TopLine="2881"/>
+        <Filename Value="wnmainform.pas"/>
+        <Caret Line="257" Column="18" TopLine="183"/>
       </Position7>
       <Position8>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2930" Column="21" TopLine="2881"/>
+        <Caret Line="290" Column="56" TopLine="269"/>
       </Position8>
       <Position9>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2936" Column="82" TopLine="2881"/>
+        <Caret Line="2783" Column="19" TopLine="2744"/>
       </Position9>
       <Position10>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2942" Column="82" TopLine="2881"/>
+        <Caret Line="2785" Column="19" TopLine="2744"/>
       </Position10>
       <Position11>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="350" Column="38" TopLine="322"/>
+        <Caret Line="358" Column="71" TopLine="345"/>
       </Position11>
       <Position12>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2332" Column="105" TopLine="2287"/>
+        <Caret Line="1816" Column="21" TopLine="1778"/>
       </Position12>
       <Position13>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2364" Column="13" TopLine="2295"/>
+        <Caret Line="132" Column="90" TopLine="123"/>
       </Position13>
       <Position14>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="157" Column="26" TopLine="135"/>
+        <Caret Line="308" Column="29" TopLine="241"/>
       </Position14>
       <Position15>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="175" Column="16" TopLine="135"/>
+        <Caret Line="381" Column="28" TopLine="356"/>
       </Position15>
       <Position16>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2362" Column="13" TopLine="2295"/>
+        <Caret Line="1919" Column="39" TopLine="1871"/>
       </Position16>
       <Position17>
-        <Filename Value="wnmainform.pas"/>
-        <Caret Line="257" Column="18" TopLine="183"/>
+        <Filename Value="ucmdbox.pas"/>
+        <Caret Line="286" Column="69" TopLine="270"/>
       </Position17>
       <Position18>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="290" Column="56" TopLine="269"/>
+        <Caret Line="309" Column="23" TopLine="270"/>
       </Position18>
       <Position19>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2783" Column="19" TopLine="2744"/>
+        <Caret Line="2357" Column="34" TopLine="2321"/>
       </Position19>
       <Position20>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2785" Column="19" TopLine="2744"/>
+        <Caret Line="2209" Column="30" TopLine="2171"/>
       </Position20>
       <Position21>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="358" Column="71" TopLine="345"/>
+        <Caret Line="181" Column="12" TopLine="168"/>
       </Position21>
       <Position22>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="1816" Column="21" TopLine="1778"/>
+        <Caret Line="3088" Column="16" TopLine="3068"/>
       </Position22>
       <Position23>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="132" Column="90" TopLine="123"/>
+        <Caret Line="3079" Column="59" TopLine="3069"/>
       </Position23>
       <Position24>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="308" Column="29" TopLine="241"/>
+        <Caret Line="78" Column="54" TopLine="64"/>
       </Position24>
       <Position25>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="381" Column="28" TopLine="356"/>
+        <Caret Line="182" TopLine="175"/>
       </Position25>
       <Position26>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="1919" Column="39" TopLine="1871"/>
+        <Caret Line="9" Column="68"/>
       </Position26>
       <Position27>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="286" Column="69" TopLine="270"/>
+        <Caret Line="242" Column="30" TopLine="228"/>
       </Position27>
       <Position28>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="309" Column="23" TopLine="270"/>
+        <Caret Line="122" Column="24" TopLine="102"/>
       </Position28>
       <Position29>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2357" Column="34" TopLine="2321"/>
+        <Caret Line="297" Column="25" TopLine="275"/>
       </Position29>
       <Position30>
         <Filename Value="ucmdbox.pas"/>
-        <Caret Line="2209" Column="30" TopLine="2171"/>
+        <Caret Line="1875" Column="19" TopLine="1852"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="10"/>
+    <Version Value="11"/>
     <PathDelim Value="\"/>
     <Parsing>
       <SyntaxOptions>
@@ -260,6 +248,7 @@
     </CodeGeneration>
     <Linking>
       <Debugging>
+        <DebugInfoType Value="dsDwarf3"/>
         <StripSymbols Value="True"/>
       </Debugging>
       <LinkSmart Value="True"/>
@@ -269,9 +258,6 @@
         </Win32>
       </Options>
     </Linking>
-    <Other>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="2">
